// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector relation with inline relation column 1`] = `
Object {
  "numTables": 2,
  "sdl": "type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  product: Product @pgRelation(column: \\"product_id\\")
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bills: [Bill!]!
  description: String!
}",
}
`;

exports[`Introspector relation with inline relation column NOT NULL 1`] = `
Object {
  "numTables": 2,
  "sdl": "type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  product: Product @pgRelation(column: \\"product_id\\")
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bills: [Bill!]!
  description: String!
}",
}
`;

exports[`Introspector relation with relation table 1`] = `
Object {
  "numTables": 3,
  "sdl": "type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  products: [Product!]! @pgRelationTable(table: \\"bill_product\\" name: \\"bill_product\\")
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bills: [Bill!]! @pgRelationTable(table: \\"bill_product\\" name: \\"bill_product\\")
  product: String!
}",
}
`;

exports[`Introspector relation with relation table with extra column 1`] = `
Object {
  "numTables": 3,
  "sdl": "type Bill @pgTable(name: \\"bill\\") {
  id: Int! @unique
  bill: String!
  bill_products: [Bill_product!]!
}

type Bill_product @pgTable(name: \\"bill_product\\") {
  bill: Bill @pgRelation(column: \\"bill_id\\")
  product: Product @pgRelation(column: \\"product_id\\")
  some_other_column: String!
}

type Product @pgTable(name: \\"product\\") {
  id: Int! @unique
  bill_products: [Bill_product!]!
  product: String!
}",
}
`;
